--- a/compose-assignment-2/drupal-compose-assignment-2.yml
+++ b/compose-assignment-2/drupal-compose-assignment-2.yml
@@ -1,6 +1,8 @@
+version: '3.9'
+
 services:
   drupal:
-    image: drupal:9.1.0
+    image: drupal:9
     ports:
       - "8080:80"
     volumes: 
@@ -12,9 +14,15 @@ services:
   postgres: 
     image: postgres 
     environment: 
-    - POSTGRES_PASSWORD=mypasswd
+    - POSTGRES_PASSWORD_FILE=/run/secrets/psql-pw
+    secrets:
+      - psql-pw
 volumes: 
     drupal-modules:
     drupal-profiles:
     drupal-sites: 
     drupal-themes:
+
+secrets:
+  psql-pw:
+    external: true
